os_crypt: Load the initial cache with a default empty config.

For users that do not care to set a config, have the cache start with a
default blank config.

BUG=750391

Change-Id: Ia320b6c058137d68a55af33bc8ffb9bf5226a325